--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ section.two-columns .column {
   </div>
   <div style="padding-left: 80px">
     <p>어떤 분야든, 친절한 코드니우스가 도와드릴게요. <br> 
-    지구에 있는 사람들이 보지 못한 빅데이터를 토대로, 코드니우스와 함께라면, 누구나 아이디어 뱅크가 될 수 있어요!간단하게 내가 하고 싶은 것을 물어보면 코드니우스가 피드백 해줄거에요.</p>
+    지구에 있는 사람들이 보지 못한 빅데이터를 토대로, 코드니우스와 함께라면, 누구나 아이디어 뱅크가 될 수 있어요! 간단하게 내가 하고 싶은 것을 물어보면 코드니우스가 피드백 해줄거에요.</p>
     <h4 style="padding-top:4vw"> 지금 바로 구독하시고 창의력 가득한 새로운 나를 만나보세요. </h4>
   </div>
 </section>
@@ -850,8 +850,8 @@ moveImages();
         <!-- Home에 id 추가 -->
     <a href="#home" style="text-decoration: none; color: lightgray;font-size:1.4rem;font-family:'Pretendard-medium'">Home</a><br>
 <a href="#Ourstory" style="text-decoration: none; color: lightgray;font-size:1.4rem;font-family:'Pretendard-medium'">Our story</a><br>
-<a href="#career" style="text-decoration: none; color: lightgray;font-size:1.4rem;font-family:'Pretendard-medium'">Career</a><br>
 <a href="#Feedback" style="text-decoration: none; color: lightgray;font-size:1.4rem;font-family:'Pretendard-medium'">Feedback</a><br>
+<a href="#Review" style="text-decoration: none; color: lightgray;font-size:1.4rem;font-family:'Pretendard-medium'">Review</a><br>
 
     </div>
 </div>
